--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ License: GNU/GPL Version 2 or later. http://www.gnu.org/licenses/gpl.html
 		margin:0;
 		font-size:14px;
 		line-height:1.6em;
-		background: #1778a9 url(../images/umbrella1.jpg) fixed center center;	
+		background: #1778a9 url(../images/womenssuffrage.jpg) fixed center center;	
 		background-size: 100% 100%;
 		height:100%;
 	}
